# losartan-model

./: .gitignore  .zenodo.json  Dockerfile  Dockerfile.md  README.md  losartan_model.omex  losartan_models_fair.xlsx  mit.txt  pyproject.toml
.github/workflows/: docker.yml  python.yml
docs/: RELEASE.md
figures/: raas_losartan.nwt
fit/20250708_183921__4fba0/LOSARTAN_LSQ_PK/: index.html  optimization_result.tsv  report.txt
fit/20250711_231400__8d0b3/LOSARTAN_LSQ_PD/: index.html  optimization_result.tsv  report.txt
models/: losartan_body.md  losartan_body.xml  losartan_body_flat.md  losartan_body_flat.xml  losartan_intestine.md  losartan_intestine.xml  losartan_kidney.md  losartan_kidney.xml  losartan_liver.md  losartan_liver.xml  losartan_model.omex  losartan_raas.md  losartan_raas.xml
release-notes/: 0.5.0.md  0.5.1.md  0.7.0.md  0.7.1.md  0.7.2.md  0.8.0.md  0.8.1.md  0.8.2.md
simulations/all/: index.html
simulations/all/Azizi1999/: Azizi1999.html  Azizi1999.json  Azizi1999_CAN8_ang1.tsv  Azizi1999_LOS50_ang1.tsv  Azizi1999_LOS50_ang2.tsv  Azizi1999_LOS50_renin.tsv  Azizi1999_placebo_map.tsv
simulations/all/Bae2011/: Bae2011.html  Bae2011.json
simulations/all/Doig1993/: Doig1993.html  Doig1993.json  Doig1993_LOS100_erect_sbp.tsv  Doig1993_LOS10_aldosterone.tsv  Doig1993_LOS25_aldosterone_change_abs.tsv  Doig1993_LOS50_aldosterone_change_rel.tsv  Doig1993_LOS50_pra.tsv  Doig1993_LOS50_supine_dbp.tsv  Doig1993_LOS5_aldosterone.tsv  Doig1993_LOS5_aldosterone_change_abs.tsv  Doig1993_placebo_erect_dbp.tsv
simulations/all/Donzelli2014/: Donzelli2014.html  Donzelli2014.json  Donzelli2014_ome5oh.tsv  Donzelli2014_omeprazole.tsv
simulations/all/DoseDependencyExperiment/: DoseDependencyExperiment.html  DoseDependencyExperiment.json
simulations/all/FDA1995S60/: FDA1995S60.html  FDA1995S60.json  FDA1995S60_exp3174_recovery_feces_LOS30IV.tsv  FDA1995S60_exp3174_recovery_urine_LOS100PO.tsv  FDA1995S60_exp3174_recovery_urine_LOS30IV.tsv  FDA1995S60_l158_feces_LOS30IV.tsv  FDA1995S60_l158_urine_LOS30IV.tsv  FDA1995S60_losartan_feces_LOS30IV.tsv  FDA1995S60_losartan_total_recovery_urine_LOS100PO.tsv  FDA1995S60_losartan_total_recovery_urine_LOS30IV.tsv
(+925 files in other folders)
